# printerd

./: .travis.yml  AUTHORS  DOCKER.md  Dockerfile  Makefile.am  README  README.md  TESTS.md  autogen.sh  configure.ac
.tx/: config
contrib/: printerd.spec.in
data/: Makefile.am  ippd.service.in  ippd.socket  org.freedesktop.printerd.conf.in  org.freedesktop.printerd.policy.in  org.freedesktop.printerd.service.in  org.freedesktop.printerd.xml  printerd.service.in
doc/: Makefile.am  TODO
docker/: Dockerfile  run-printerd.sh
ippd/: Makefile.am  ippd.py
po/: POTFILES.in  en_GB.po  en_US.po  es.po  fr.po  id.po  pt_BR.po  pt_PT.po  tr_TR.po  uk.po  vi.po
printerd/: Makefile.am  pd-client.c  pd-client.h  pd-enums.h  pd-enumtypes.c.template  pd-enumtypes.h.template  pd-error.c  pd-error.h  pd-types.h  printerd-pygi-example.py  printerd.h  printerd.pc.in
src/: Makefile.am  main.c  pd-client.c  pd-common.c  pd-common.h  pd-daemon.c  pd-daemon.h  pd-daemontypes.h  pd-device-impl.c  pd-device-impl.h  pd-engine.c  pd-engine.h  pd-job-impl.c  pd-job-impl.h  pd-log.h  pd-manager-impl.c  pd-manager-impl.h  pd-printer-impl.c  pd-printer-impl.h  pd-queue-impl.c  pd-queue-impl.h
tests/: common.sh  start-session-service.sh
tests/createprinter1/: run-test
tests/createprinter2/: run-test
tests/createprinter3/: run-test
tests/createprinter4/: run-test
tests/createprinter5/: run-test
tests/cupsfilter/: run-test
tests/filter1/: run-test
tests/filter2/: run-test
tests/job1/: run-test
tests/job2/: run-test
tests/job3/: run-test
tests/job4/: run-test
tests/python1/: Manager.GetPrinters.py  run-test
tests/started/: run-test
tests/stop-session-service/: run-test
tests/updatedriver1/: run-test
tests/version/: run-test
tools/: Makefile.am  pd-cli.c  pd-client.c  pd-view.py  printerd-gui.py
